--- a/ACE/app/src/main/res/values/strings.xml
+++ b/ACE/app/src/main/res/values/strings.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="hotspot_detail_image"/>
+    <string name="Login">Login</string>
+    <string name="email">myemail@canada.ca</string>
+    <string name="sign_in">Sign In</string>
+    <string name="emailHint">Email/PIN</string>
+    <string name="forgot_password">Forgot Password?</string>
+    <string name="password">Password</string>
+    <string name="log_in">Log In</string>
+    <string name="sign_up">Sign Up</string>
 </resources>
