--- a/ACE/app/src/main/res/values/strings.xml
+++ b/ACE/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="password">Password</string>
     <string name="log_in">Log In</string>
     <string name="sign_up">Sign Up</string>
+    <string name="carpicture">CarPicture</string>
 </resources>
