--- a/ACE/app/src/main/res/values/strings.xml
+++ b/ACE/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="hotspot_detail_image"/>
     <string name="Login">Login</string>
-    <string name="email">myemail@canada.ca</string>
+    <string name="emailExample">myemail@canada.ca</string>
     <string name="sign_in">Sign In</string>
     <string name="emailHint">Email/PIN</string>
     <string name="forgot_password">Forgot Password?</string>
