--- a/ACE/app/src/main/res/values/strings.xml
+++ b/ACE/app/src/main/res/values/strings.xml
@@ -46,6 +46,7 @@
     <string name="sign_up">Sign Up</string>
     <string name="steps_to_reproduce">Steps to Reproduce</string>
     <string name="hotspot_location">Hotspot Location</string>
+    <string name="_1_of_1">1 of 1</string>
 
 
 </resources>
